<?xml version="1.0"?>
<package format="3">
  <name>cpp-statsd-client</name>
  <version>2.3.1</version>
  <description>cpp-statsd-client package</description>

  <maintainer email="pbovbel@locusrobotics.com">Paul Bovbel</maintainer>

  <license>MIT</license>
  <buildtool_depend>cmake</buildtool_depend>

  <!-- <depend>build-essentials</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
